form: fix issue input boxes were overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,7 @@ header {
   color: var(--decoration1);
 }
 
+/* add spacing above Main container, so that ther eis visible space with navbar */
 #main-section{
   margin-top: 75px;
 }
@@ -296,10 +297,10 @@ textarea,
 #name,
 #email,
 #contact-number {
-  font: 0.8em;
-  min-width: 95%;
+  font: 0.7em;
+  min-width: 90%;
   margin-left: 5px;
-}
+ }
 
 textarea {
   height: 10rem;
@@ -307,13 +308,18 @@ textarea {
 
 .details-labels {
   color: var(--main-text-color);
+  font-size: 16px;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   margin-top: 5px;
   margin-bottom: 1px;
   margin-left: 5px;
 }
+/*-- set font size for placeholder text on form --*/
+input{
+  font-size: 16px;
 
+}
 
 /*stylng of button on form--*/
 #form-button {
